--- a/ProyectoSGIO/ProyectoSGIO/Views/Shared/_Layout.cshtml
+++ b/ProyectoSGIO/ProyectoSGIO/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>SGIO - Layout</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/root/css/styles.css" rel="stylesheet" />
+    <link href="~/root/css/diseño.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -13,21 +14,49 @@
     <header>
         <nav class="navbar navbar-expand-lg" style="background-color: #0056B3;">
             <div class="container-fluid">
-                <a class="navbar-brand">Logo</a>
+                <a class="navbar-brand" href="#">Logo</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <!-- Menú centralizado -->
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link" aria-current="page" href="#">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Módulos</a>
+                            <a class="nav-link" href="#">Cotización</a>
                         </li>
+                        <!-- Dropdown Módulos -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Módulos
+                            </a>
+
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Planificación</a></li>
+                                <li><a class="dropdown-item" href="#">Gestión de RH</a></li>
+                                <li><a class="dropdown-item" href="#">Maquinaria</a></li>
+                                <li><a class="dropdown-item" href="#">Inventario</a></li>
+                                <li><a class="dropdown-item" href="#">Contabilidad</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Proyectos previos</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Acerca de nosotros</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contacto</a>
+                        </li>
+
                     </ul>
-                    <!-- Dropdown del Perfil -->
-                    <ul class="navbar-nav mb-2 mb-lg-0">
+                    <!-- Dropdown del Perfil e Iniciar Sesión a la derecha -->
+                    <ul class="navbar-nav mb-lg-0">
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Perfil
@@ -48,35 +77,10 @@
         </nav>
     </header>
 
-    <!-- Layout con Sidebar y Contenido Principal -->
-    <div class="container-fluid">
-        <div class="row">
-            <!-- Sidebar -->
-            <nav class="col-md-3 col-lg-2 sidebar py-5">
-                <ul class="nav flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Planificación</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Gestión de RH</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Maquinaria</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Inventario</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Contabilidad</a>
-                    </li>
-                </ul>
-            </nav>
 
-            <!-- Main Content -->
-            <main class="col-md-9 col-lg-10 main-content">
-                @RenderBody()
-            </main>
-        </div>
+    <!-- RenderBody -->
+    <div>
+        @RenderBody()
     </div>
 
     <!-- Footer -->
