--- a/ProyectoSGIO/ProyectoSGIO/root/css/diseño.css
+++ b/ProyectoSGIO/ProyectoSGIO/root/css/diseño.css
@@ -51,12 +51,47 @@ footer {
     text-align: center;
     padding: 10px;
 }
+    footer a {
+        text-decoration: none;
+    }
 
-.sidebar {
-    background-color: #17A2B8;
-    min-height: 100vh;
+        footer a:hover {
+            text-decoration: underline;
+            color: #FFD700;
+        }
+
+.btn-accionUno {
+    --clr-font-main: hsla(0 0% 20% / 100);
+    --btn-bg-1: hsla(194 100% 69% / 1);
+    --btn-bg-2: hsla(217 100% 56% / 1);
+    --btn-bg-color: hsla(360 100% 100% / 1);
+    --radii: 0.5em;
+    cursor: pointer;
+    padding: 0.9em 1.4em;
+    min-width: 120px;
+    min-height: 44px;
+    font-size: var(--size, 1rem);
+    font-weight: 500;
+    transition: 0.8s;
+    background-size: 280% auto;
+    background-image: linear-gradient( 325deg, var(--btn-bg-2) 0%, var(--btn-bg-1) 55%, var(--btn-bg-2) 90% );
+    border: none;
+    border-radius: var(--radii);
+    color: var(--btn-bg-color);
+    box-shadow: 0px 0px 20px rgba(71, 184, 255, 0.5), 0px 5px 5px -1px rgba(58, 125, 233, 0.25), inset 4px 4px 8px rgba(175, 230, 255, 0.5), inset -4px -4px 8px rgba(19, 95, 216, 0.35);
 }
 
-.main-content {
-    padding: 20px;
+    .btn-accionUno:hover {
+        background-position: right top;
+    }
+
+    .btn-accionUno:is(:focus, :focus-visible, :active) {
+        outline: none;
+        box-shadow: 0 0 0 3px var(--btn-bg-color), 0 0 0 6px var(--btn-bg-2);
+    }
+
+@media (prefers-reduced-motion: reduce) {
+    .btn-accionUno {
+        transition: linear;
+    }
 }
