--- a/ProyectoSGIO/ProyectoSGIO/Views/Shared/_Layout.cshtml
+++ b/ProyectoSGIO/ProyectoSGIO/Views/Shared/_Layout.cshtml
@@ -79,7 +79,7 @@
     </header>
 
     <!-- RenderBody -->
-    <div>
+    <div class="main-content">
         @RenderBody()
     </div>
 
@@ -123,5 +123,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/root/js/funciones.js"></script>
 </body>
 </html>
