--- a/ProyectoSGIO/ProyectoSGIO/root/css/diseño.css
+++ b/ProyectoSGIO/ProyectoSGIO/root/css/diseño.css
@@ -1,5 +1,5 @@
-﻿body {
-    min-height: 100vh;
+﻿body, html {
+    height: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -51,6 +51,7 @@ footer {
     text-align: center;
     padding: 10px;
 }
+
     footer a {
         text-decoration: none;
     }
@@ -59,6 +60,10 @@ footer {
             text-decoration: underline;
             color: #FFD700;
         }
+
+.main-content {
+    flex-grow: 1;
+}
 
 .btn-accionUno {
     --clr-font-main: hsla(0 0% 20% / 100);
