Se agrega controlador de Home

--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_LayoutExterno.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_LayoutExterno.cshtml
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SGIO - Web</title>
-    <link href="~/root/css/Layout_Externo.css" rel="stylesheet" />
+    <link href="~/css/layout_externo.css" rel="stylesheet" />
 </head>
 <body>
 
