--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Home/Index.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Home/Index.cshtml
@@ -1,6 +1,16 @@
 ﻿@{
     ViewBag.Title = "Home Page";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    var successMessage = TempData["SuccessMessage"] as string;
+
+}
+
+@if (!string.IsNullOrEmpty(successMessage))
+{
+    <div class="alert alert-success alert-dismissible fade show mt-3" role="alert">
+        @successMessage
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
 }
 
 <!-- Carousel -->
