Vista: Ver Perfil

--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Acceso/Registro.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Acceso/Registro.cshtml
@@ -16,7 +16,7 @@
 
         <label>
             <input asp-for="Apellido" class="input" required />
-            <span>Apellido</span>
+            <span>Apellido(s)</span>
         </label>
     </div>
 
