--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Acceso/IniciarSesion.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Acceso/IniciarSesion.cshtml
@@ -7,7 +7,7 @@
 
 <form asp-controller="Acceso" asp-action="IniciarSesion" method="post" class="form">
     <p class="title">¡Bienvenido de nuevo!</p>
-    <p class="message">Por favor, introduce tus credenciales para acceder a tu cuenta</p>
+    <p class="message">Por favor, introduce tus credenciales para acceder a tu cuenta.</p>
     <label>
         <input asp-for="Correo" class="input" required />
         <span>Correo</span>
