--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
@@ -44,6 +44,13 @@
                             </li>
                         }
 
+                         @if (User.IsInRole("Administrador"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Administrativo" asp-action="CrearUsuario">Crear nuevo usuario</a>
+                            </li>
+                        }
+
                         @if (User.IsInRole("Empleado"))
                         {
                             <li class="nav-item dropdown">
