--- a/ProyectoSGIO/ProyectoSGIOCore/wwwroot/css/Layout_Externo.css
+++ b/ProyectoSGIO/ProyectoSGIOCore/wwwroot/css/Layout_Externo.css
@@ -146,3 +146,17 @@
         opacity: 0;
     }
 }
+
+.password-container {
+    position: relative;
+}
+
+.toggle-password {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    cursor: pointer;
+}
