--- a/ProyectoSGIO/ProyectoSGIOCore/wwwroot/css/styles.css
+++ b/ProyectoSGIO/ProyectoSGIOCore/wwwroot/css/styles.css
@@ -108,3 +108,20 @@ footer {
     object-fit: cover;
     border: 2px solid #0056B3;
 }
+
+.input-group {
+    position: relative;
+}
+
+.toggle-password {
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    border: none;
+    background: none;
+    padding: 0 10px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
