--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
@@ -51,6 +51,13 @@
                             </li>
                         }
 
+                        @if (User.IsInRole("Administrador"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Proveedores" asp-action="VisualizarProveedores">Proveedores</a>
+                            </li>
+                        }
+
                         @if (User.IsInRole("Empleado"))
                         {
                             <li class="nav-item dropdown">
