--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Proveedores/EliminarProveedor.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Proveedores/EliminarProveedor.cshtml
@@ -7,7 +7,7 @@
 <div class="container mt-5">
     <h2 class="text-center mb-4">Eliminar Proveedor</h2>
 
-    <div class="alert alert-warning">
+    <div class="alert alert-warning text-center mx-auto">
         <p>¿Estás seguro de que deseas eliminar el proveedor @Model.Nombre? Esta acción no se puede deshacer.</p>
     </div>
 
