--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Administrativo/CrearUsuario.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Administrativo/CrearUsuario.cshtml
@@ -5,9 +5,9 @@
     var rolesList = ViewBag.Roles as List<ProyectoSGIOCore.Models.Rol>;
 }
 
-<div class="container">
+<div class="container my-4">
     <div class="form-container">
-        <h2 class="text-center mb-4">Crear Nuevo Usuario</h2>
+        <h2 class="text-center mb-4">Crear nuevo usuario</h2>
 
         <!-- Mensaje de exito -->
         @if (TempData["MensajeExito"] != null)
