--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Proveedores/VisualizarProveedores.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Proveedores/VisualizarProveedores.cshtml
@@ -8,7 +8,7 @@
     <h2 class="text-center mb-4">Lista de Proveedores</h2>
 
     <div class="text-end mb-3">
-        <a href="~/Proveedores/RegistroProveedor" class="btn btn-primary">Registrar Nuevo Proveedor</a>
+        <a href="~/Proveedores/RegistroProveedor" class="btn btn-primary">Registrar nuevo proveedor</a>
     </div>
 
     <table class="table table-striped">
