--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
@@ -7,7 +7,8 @@
     <title>SGIO - Layout</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="~/css/styles.css" rel="stylesheet" />    
+    <link href="~/css/styles.css" rel="stylesheet" />
+    <link href="https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -23,7 +24,7 @@
                     <!-- Menú centralizado -->
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link" aria-current="page" asp-controller="Home" asp-action="Index">Inicio</a>
                         </li>
 
                         @if (User.IsInRole("Administrador") || User.IsInRole("Supervisor"))
@@ -42,19 +43,19 @@
                                     <li><a class="dropdown-item" href="#">Contabilidad</a></li>
                                 </ul>
                             </li>
-                        }
-
-                         @if (User.IsInRole("Administrador"))
+                        }                        
+                        
+                        @if (User.IsInRole("Administrador"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link" asp-controller="Administrativo" asp-action="CrearUsuario">Crear nuevo usuario</a>
+                                <a class="nav-link" asp-controller="Administrativo" asp-action="VisualizarUsuarios">Gestión de Usuarios</a>
                             </li>
                         }
 
                         @if (User.IsInRole("Administrador"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link" asp-controller="Proveedores" asp-action="VisualizarProveedores">Proveedores</a>
+                                <a class="nav-link" asp-controller="Proveedores" asp-action="VisualizarProveedores">Gestión de Proveedores</a>
                             </li>
                         }
 
@@ -81,17 +82,23 @@
 
                         }
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Proyectos previos</a>
-                        </li>
+                        @if (!User.Identity.IsAuthenticated ||
+                        !(User.IsInRole("Administrador") || User.IsInRole("Supervisor") || User.IsInRole("Empleado")))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Proyectos previos</a>
+                            </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Acerca de nosotros</a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Acerca de nosotros</a>
+                            </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contacto</a>
+                            </li>
+                        }
+
+
 
                     </ul>
                     <!-- Dropdown del Perfil e Iniciar Sesión a la derecha -->
@@ -173,6 +180,10 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="https://cdn.datatables.net/2.1.8/js/dataTables.min.js"></script>
     <script src="~/js/funciones.js"></script>
+    @RenderSection("scripts", required: false)
+
 </body>
 </html>
