--- a/ProyectoSGIO/ProyectoSGIOCore/wwwroot/css/styles.css
+++ b/ProyectoSGIO/ProyectoSGIOCore/wwwroot/css/styles.css
@@ -126,22 +126,22 @@ footer {
     cursor: pointer;
 }
 
-table#usuariosTable th,
-table#usuariosTable td {
+.table-custom th,
+.table-custom td {
     vertical-align: middle;
     padding: 10px;
 }
 
-table#usuariosTable thead th {
+.table-custom thead th {
     color: black;
     background-color: white;
     text-align: center;
 }
 
-table#usuariosTable tbody tr:hover {
+.table-custom tbody tr:hover {
     background-color: hsla(194, 100%, 69%, 1);
 }
 
-table#usuariosTable tbody tr {
+.table-custom tbody tr {
     transition: background-color 0.5s ease;
 }
