Update de Empleados

--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
 
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="#">Planificación</a></li>
-                                    <li><a class="dropdown-item" href="#">Gestión de RH</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Empleado" asp-action="VisualizarEmpleados">Gestión de RH</a></li>
                                     <li><a class="dropdown-item" href="#">Maquinaria</a></li>
                                     <li><a class="dropdown-item" href="#">Inventario</a></li>
                                     <li><a class="dropdown-item" href="#">Contabilidad</a></li>
