Arreglo a editar empleado

--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Empleado/EditarEmpleado.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Empleado/EditarEmpleado.cshtml
@@ -18,6 +18,7 @@
         }
 
         <form asp-action="EditarEmpleado" asp-controller="Empleado" method="post">
+            <input type="hidden" asp-for="IdEmpleado" />
 
             <!-- Nombre -->
             <div class="mb-3">
