Commit de los tickets #23 y #8
Se añade la lógica para poder recuperar la contraseña y también registrar horas extras de los empleados.

--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Acceso/IniciarSesion.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Acceso/IniciarSesion.cshtml
@@ -24,6 +24,11 @@
 
     <button type="submit" class="submit">Iniciar Sesion</button>
     <p class="signin">¿No tiene una cuenta? <a asp-controller="Acceso" asp-action="Registro">Crear Cuenta</a></p>
+
+    <!-- Añade el enlace para recuperar la contraseña -->
+    <p class="signin">
+        ¿Olvidaste tu contraseña? <a href="@Url.Action("ForgotPassword", "PasswordRecovery")">Recuperar contraseña</a>
+    </p>
 </form>
 
 
