--- a/ProyectoSGIO/ProyectoSGIOCore/Views/PasswordRecovery/ForgotPassword.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/PasswordRecovery/ForgotPassword.cshtml
@@ -2,12 +2,12 @@
 
 <h2>Forgot Password</h2>
 
-<form asp-action="ForgotPassword" method="post">
+<form asp-controller="PasswordRecovery" asp-action="ForgotPassword" method="post">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="Email"></label>
         <input asp-for="Email" class="form-control" />
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Enviar enlace de recuperación</button>
 </form>
